# MindOverChatter

./: .dockerignore  .env.example  .gitignore  .hygen.js  ARCHITECTURE.md  ASSESSMENTS_IMPLEMENTATION.md  BUILD_ORDER.md  CLAUDE.md  CODEGEN.md  MEM0_INTEGRATION_PLAN.md  PRD_STRUCTURED.md  README.md  TECHSTACK.md  VISION_RESEARCH.md  VOICE_NEXT_STEPS.md  VOICE_PIPELINE_ISSUES.md  VOICE_V2_MIGRATION.md  biome.json  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  recovered-therapeutic-data.json  tsconfig.json  turbo.json
.claude/: DEVELOPMENT_SOP.md  VOICE_FIRST_PLAN.md  VOICE_REFERENCE_STUDY.md  soul.md
.claude/agent-memory/compass/: MEMORY.md  project_competitor_research_ai_therapy.md  project_emotion_llama_deep_dive.md  (+1 more)
.claude/agents/: compass.md  forge.md  neura.md  pixel.md  researcher.md  sentinel.md  vigil.md
.claude/commands/: crisis-test.md  db-migrate.md  docker-up.md  ship.md  validate-feature.md
.claude/rules/: backend.md  database.md  frontend.md  python-services.md
.claude/scripts/: post-edit-lint.sh  route.sh  safety-check.sh  subagent-quality-gate.sh
.claude/skills/: assessment-flow.md  code-review-checklist.md  drizzle-migration.md  emotion-pipeline.md  hono-rpc-wiring.md  probing-anxiety.md  probing-depression.md  probing-depth.md  probing-development.md  probing-general.md  probing-grief.md  probing-longitudinal.md  probing-panic.md  probing-relationship.md  python-service-pattern.md  rest-sse-protocol.md  sdk-session-management.md  therapeutic-direction.md  therapeutic-safety.md  websocket-protocol.md
apps/server/: Dockerfile  docker-entrypoint.sh  drizzle.config.ts  generate-research-migration.cjs  generate-research-migration.mts  package.json  tsconfig.json
apps/web/: Dockerfile  components.json  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
autoresearch/: README.md  SPRINT_QUALITY_V1.md  program.md  results.tsv
autoresearch/benchmark/: README.md
autoresearch/candidates/: README.md
e2e/: api-smoke.spec.ts  smoke.spec.ts
scripts/: backfill-formulation-from-recovery.cjs  dev.sh  restore-therapeutic-context.cjs
services/emotion/: Dockerfile  main.py  pyproject.toml  test_normalization.py
services/memory/: Dockerfile  main.py  pyproject.toml
services/tts/: .dockerignore  Dockerfile  main.py  pyproject.toml
services/voice/: Dockerfile  bot.py  claude_processor.py  config.py  main.py  metrics_collector.py  pyproject.toml  reflection_manager.py
services/whisper/: .dockerignore  Dockerfile  main.py  pyproject.toml
(+262 files in other folders)
