[project]
name = "moc-memory"
version = "0.1.0"
description = "Memory management service using Mem0 + pgvector"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mem0ai>=0.1.29,<0.2",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
