[project]
name = "moc-tts"
version = "0.1.0"
description = "Text-to-speech service (kokoro-onnx with pyttsx3 fallback)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "kokoro-onnx>=0.4.0",
    "numpy>=1.24.0",
    "pyttsx3>=2.90",
    "soundfile>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]
