[project]
name = "moc-whisper"
version = "0.1.0"
description = "Speech-to-text service using faster-whisper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "faster-whisper>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
